[package]
name = "bulletml"
version = "0.2.1"
authors = ["Arnaud de Bossoreille <arnaud.debossoreille@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "BulletML library in Rust"
documentation = "https://docs.rs/bulletml"
repository = "https://github.com/arnodb/bulletml_rs"

[dependencies]
derive-new = "0.5"
indextree = "4.0"
fasteval = "0.2"
regex = "1.3"
roxmltree = "0.9"
thiserror = "1.0"

[dev-dependencies]
matches = "0.1"

[features]
backtrace = []
